# pipen-dry

./: .gitignore  .pre-commit-config.yaml  README.md  example.py  pipen_dry.py  pyproject.toml  setup.py
.github/workflows/: build.yml
