[tool.poetry]
name = "pipen-dry"
version = "0.10.0"
description = "Dry runner for pipen pipelines"
authors = ["pwwang <pwwang@pwwang.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pipen = "^0.14"

[tool.poetry.build]
generate-setup-file = true

[tool.poetry.dev-dependencies]

[tool.poetry.plugins.pipen_sched]
dry = "pipen_dry:PipenDryScheduler"

[tool.poetry.plugins.pipen]
dry = "pipen_dry:PipenDry"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
